exports[`test the button handling an onclick event 1`] = `
<button
  className="bvmfze"
  onClick={[Function]}>
  ButtonValue
</button>
`;

exports[`test the button matches the snapshot 1`] = `
<button
  className="bvmfze">
  ButtonValue
</button>
`;
